adjusted Personal